jlatexmath (0.9.4)

	* Add a static method TeXFormula.setDPITarget(float dpi).

	* Add shadowbox, doublebox and ovalbox.

        * Fix bugs on rotatebox (bad default center), with the parser
          (...\end{foo}a... gave an error)) and improve the debug mode.

        * Add Unicode chars again and forgotten commands

        * Avoid the loading of Greek fonts in math mode in GeoGebra.

        * Add characters in Unicode.

        * Fix a bug on \bigtriangleup and \bigtriangledown (use stmary ones)

        * Add support for few Unicode characters.

        * Fix a bug of cyclic referency between atoms coming from Unicode
          mapping.

        * Convert foreign numbers into roman ones

        * Add a preview of an error in partial mode

        * Add the left quote and reduce slightly the space under for underarrows

        * The percent for comments was not handled

        * HTML entity &#8495; forgotten

        * Fix bug in aligned & alignedat env. (thanks to Graeme Kidd)

        * Add a thread-safe cache to cache the images generated from a formula

        * Can use dollar in \text or \mbox to switch into math mode

        * Add a static method TeXFormula.getPartialTeXFormula(String) which
          ignores errors and returns a partial TeXFormula (with no errors).
          Useful to display LaTeX on typing.

        * JLM is now ready for support FOP 1.0 :)

        * Fix a bug in jlmDynamic where the contents where preprocessed

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>

jlatexmath (0.9.3)

        * 0.9.3 version

        * Fix bug of size with colored box

        * Add a map between Unicode (math) and LaTeX symbols
          (e.g. &#8734; => \infty)

        * problem with @{blah} in array env.

jlatexmath (0.9.2)

        * add new commands \tiny, \footnotesize,... and \overwithdelims,...

        * Handle vertical and horizontal lines in array environment

        * Fix bug in the render of (over|under)braces
