@@ -31,28 +31,57 @@ package org.scilab.forge.jlatexmath;
 import java.awt.Graphics2D;
 import java.awt.geom.AffineTransform;
 import java.awt.image.BufferedImage;
+import java.awt.RenderingHints;
 
 /**
  * A box representing a box containing a graphics.
  */
 public class GraphicsBox extends Box {
 
-    private BufferedImage image;
+    public final static int BILINEAR = 0;
+    public final static int NEAREST_NEIGHBOR = 1;
+    public final static int BICUBIC = 2;
 
-    public GraphicsBox(BufferedImage image, int Width, int Height, float width, float height) {
+    private BufferedImage image;
+    private float scl;
+    private Object interp;
+
+    public GraphicsBox(BufferedImage image, float width, float height, float size, int interpolation) {
 	this.image = image;
 	this.width = width;
 	this.height = height;
+	this.scl = 1 / size;
 	depth = 0;
 	shift = 0;
+	switch (interpolation) {
+	case BILINEAR :
+	    interp = RenderingHints.VALUE_INTERPOLATION_BILINEAR;
+	    break;
+	case NEAREST_NEIGHBOR :
+	    interp = RenderingHints.VALUE_INTERPOLATION_NEAREST_NEIGHBOR;
+	    break;
+	case BICUBIC :
+	    interp = RenderingHints.VALUE_INTERPOLATION_BICUBIC;
+	    break;
+	default :
+	    interp = null;
+	}
     }
    
     public void draw(Graphics2D g2, float x, float y) {
 	AffineTransform oldAt = g2.getTransform();
+	Object oldKey = null;
+	if (interp != null) {
+	    oldKey = g2.getRenderingHint(RenderingHints.KEY_INTERPOLATION);
+	    g2.setRenderingHint(RenderingHints.KEY_INTERPOLATION, interp);
+	}
 	g2.translate(x, y - height);
-	g2.scale(Math.abs(1 / oldAt.getScaleX()), Math.abs(1 / oldAt.getScaleY()));
+	g2.scale(scl, scl);
 	g2.drawImage(image, 0, 0, null);
 	g2.setTransform(oldAt);
+	if (oldKey != null) {
+	    g2.setRenderingHint(RenderingHints.KEY_INTERPOLATION, oldKey);
+	}
     }
     
     public int getLastFontId() {
